syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package basicstream.v1;

service VideoService {
  rpc StreamVideo (GetStreamVideoRequest) returns (GetStreamVideoResponse);
}

message GetStreamVideoRequest {
  string id = 1;
}

message GetStreamVideoResponse {
}
